# lol-esports-scraper

./: .env.example  .gitignore  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/lol_esports_scraper/: __init__.py  browser.py  cli.py  config.py  exporter.py  gol_fetcher.py  leaguepedia_fetcher.py  logging.py  loltv_fetcher.py  models.py  parsers.py  pipeline.py  reconcile.py  snapshot.py  storage.py
tests/: test_parsers.py  test_reconcile.py  test_smoke.py  test_storage.py
