[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lol-esports-scraper"
version = "0.1.0"
description = "Async League of Legends esports scraper for gol.gg, loltv.gg, and Leaguepedia"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ark-daemon" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "aiosqlite>=0.19",
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "loguru>=0.7",
  "pandas>=2.2",
  "pyarrow>=15",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "selectolax>=0.3",
  "tenacity>=8.2",
  "tqdm>=4.66",
  "typer>=0.12",
  "rich>=13.7",
  "cloakbrowser>=0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[project.scripts]
lol-scraper = "lol_esports_scraper.cli:app"

[project.urls]
Homepage = "https://github.com/ark-daemon/lol-esports-scraper"
Repository = "https://github.com/ark-daemon/lol-esports-scraper"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
